# tte-insighting

./: .gitignore  README.md  pyproject.toml
src/: tte-v1.ipynb  tte-v2.ipynb
src/trial_sequence/: __init__.py  calculate_weights.py  censor_func.py  data_expansion.py  data_manipulation.py  predict.py  te_stats_glm_logit.py  te_weights.py  utils.py
