[project]
name = "tte-insighting"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Destin Ecarma", email = "109215379+DestinEcarma@users.noreply.github.com" }
]
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "statsmodels>=0.14.4",
    "joblib>=1.4.2",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
